# AI-OS

./: .env.example  .gitignore  2026-06-25.md  AGENTS.md  AI-OS.code-workspace  ARCHITEKTUR.md  CLAUDE.md  Erste_Schritte.md  README.md  docker-compose.yml  worker.js  wrangler.json
.agent/: schemas-location.md
.agileagentcanvas-context/: concurrency-queue-state.json  scheduler-state.json
.obsidian/: appearance.json
00_Knowledge/: 00_Knowledge_Index.md
00_Wissen/: 00_Übersicht.md  INDEX.md
01_Connections/: README.md
01_Verbindungen/: README.md
02_Fähigkeiten/: README.md
02_Skills/: README.md
03_Abläufe/: README.md
03_Routines/: README.md
05_Agenten/: agent_system.py  langgraph_engine.py  openhands_launcher.py  start_new_agents.bat  start_new_agents.sh  workflow_engine.py
05_Wiki/: Context Engineering mit Harness AI LLM inkl.docx
06_Gedächtnis/: README.md  knowledge_agent.py
06_KI-Gedächtnis/: AI-OS.one
07_Sicherheit/: README.md
backend/: .gitignore  Hermes-Starten.bat  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: hermes.py  pipeline.py
backend/app/api/: deps.py  routes.py
backend/app/core/: config.py
backend/app/models/: __init__.py  chat.py  documents.py  rag.py
backend/app/prompts/: registry.py
backend/app/rag/: chunker.py  parser.py  qdrant_store.py  service.py  vector_store.py
backend/app/services/: llm_service.py
backend/app/static/: hermes.html  prompts.html
backend/tests/: conftest.py  test_api.py  test_chunker.py  test_hermes.py  test_prompts.py  test_ui.py  test_vector_store.py
(+225 files in other folders)
